further pruning and add renv support

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Evaluating Semi-Parametric Nowcasts of COVID-19 Hospital Admissions in Germany
+# Evaluating a simplified forecast model in comparison to the ECDC forecasting hub ensemble
 
 This repository contains the documentation, results, and code of a project evaluating ... See the documentation for further details. 
 
