--- a/docs/paper/library.bib
+++ b/docs/paper/library.bib
@@ -1,3 +1,10 @@
+@Misc{EuroHub,
+  author       = {European COVID-19 Forecast Hub},
+  howpublished = {\url{https://covid19forecasthub.eu/}},
+  title        = {Forecasts of new cases and deaths due to Covid-19 over the next four weeks in countries across Europe and the UK.},
+  year         = {2021},
+}
+
 @Manual{R,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -21,66 +28,32 @@
     note = {https://mc-stan.org},
   }
 
-@article{gunther2021,
-	author = {G{\"u}nther, Felix and Bender, Andreas and Katz, Katharina and K{\"u}chenhoff, Helmut and H{\"o}hle, Michael},
-	date = {2021},
-	doi = {10.1002/bimj.202000112},
-	issn = {1521-4036},
-	journaltitle = {Biometrical Journal},
-	langid = {english},
-	number = {3},
-	pages = {490--502},
-	title = {Nowcasting the {{COVID}}-19 Pandemic in {{Bavaria}}},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/bimj.202000112},
-	urldate = {2021-11-04},
-	volume = {63}
+@Article{forecast.vocs,
+  title = {forecast.vocs: Forecast case and sequence notifications using variant of concern strain dynamics},
+  author = {Sam Abbott},
+  journal = {Zenodo},
+  year = {2021},
+  doi = {10.5281/zenodo.5559016},
 }
 
+@Article{scoringutils,
+  title = {Evaluating Forecasts with scoringutils in R},
+  author = {Nikos I. Bosse and Hugo Gruson and Anne Cori and Edwin {van Leeuwen} and Sebastian Funk and Sam Abbott},
+  journal = {arXiv},
+  url = {https://arxiv.org/abs/2205.07090},
+  year = {2022},
+  doi = {10.48550/ARXIV.2205.07090},
+}
 
-@article{hohle,
-	author = {H{\"o}hle, Michael and an der Heiden, Matthias},
-	date = {2014},
-	doi = {10.1111/biom.12194},
-	issn = {1541-0420},
-	journaltitle = {Biometrics},
-	number = {4},
-	pages = {993--1002},
-	shorttitle = {Bayesian Nowcasting during the {{STEC O104}}},
-	title = {Bayesian Nowcasting during the {{STEC O104}}:H4 Outbreak in {{Germany}}, 2011},
-	urldate = {2021-11-04},
-	volume = {70}}
-
-
-@article{bastos,
-	author = {Bastos, Leonardo S and Economou, Theodoros and Gomes, Marcelo F C and Villela, Daniel A M and Coelho, Flavio C and Cruz, Oswaldo G and Stoner, Oliver and Bailey, Trevor and Code{\c c}o, Claudia T},
-	date = {2019},
-	doi = {10.1002/sim.8303},
-	issn = {1097-0258},
-	journaltitle = {Statistics in Medicine},
-	number = {22},
-	pages = {4363--4377},
-	title = {A Modelling Approach for Correcting Reporting Delays in Disease Surveillance Data},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8303},
-	urldate = {2021-11-04},
-	volume = {38}}
-
-@Article{surveillance,
-  author = {Sebastian Meyer and Leonhard Held and Michael Höhle},
-  title = {Spatio-Temporal Analysis of Epidemic Phenomena Using the {R} Package {surveillance}},
+@Article{scoringRules,
+  title = {Evaluating Probabilistic Forecasts with {scoringRules}},
+  author = {Alexander Jordan and Fabian Kr\"uger and Sebastian Lerch},
   journal = {Journal of Statistical Software},
-  year = {2017},
-  volume = {77},
-  number = {11},
-  pages = {1--55},
-  doi = {10.18637/jss.v077.i11},
-}
-
-@Manual{scoringutils,
-  title = {scoringutils: A collection of proper scoring rules and metrics to assess predictions},
-  author = {Nikos Bosse},
-  year = {2020},
-  note = {R package version 0.0.0.9000},
-  url = {https://github.com/epiforecasts/scoringutils}
+  year = {2019},
+  volume = {90},
+  number = {12},
+  pages = {1--37},
+  doi = {10.18637/jss.v090.i12},
 }
 
 @article{Boettiger:2015dw,
@@ -94,59 +67,27 @@
   month = jan
 }
 
-@Misc{rstan,
-  title = {RStan: the R interface to Stan},
-  author = {{Stan Development Team}},
-  note = {R package version 2.19.3},
-  year = {2020},
-  url = {http://mc-stan.org/}
-}
-
-@Manual{scoringutils,
-  title = {scoringutils: A collection of proper scoring rules and metrics to assess predictions},
-  author = {Nikos Bosse},
-  year = {2020},
-  note = {R package version 0.0.0.9000},
-  url = {https://github.com/epiforecasts/scoringutils}
-}
-
-@Misc{EuroHub,
-  author       = {European COVID-19 Forecast Hub},
-  howpublished = {\url{https://covid19forecasthub.eu/}},
-  title        = {Forecasts of new cases and deaths due to Covid-19 over the next four weeks in countries across Europe and the UK.},
-  year         = {2021},
-}
-
-@Article{targets,
-  title = {The targets R package: a dynamic Make-like function-oriented pipeline toolkit for reproducibility and high-performance computing},
-  author = {William Michael Landau},
-  journal = {Journal of Open Source Software},
+@Manual{data.table,
+  title = {data.table: Extension of `data.frame`},
+  author = {Matt Dowle and Arun Srinivasan},
   year = {2021},
-  volume = {6},
-  number = {57},
-  pages = {2959},
-  url = {https://doi.org/10.21105/joss.02959},
+  note = {R package version 1.14.2},
+  url = {https://CRAN.R-project.org/package=data.table},
 }
 
-@Manual{gittargets,
-  title = {gittargets: Version Control for the Targets Package},
-  author = {William Michael Landau},
-  note = {https://wlandau.github.io/gittargets/, https://github.com/wlandau/gittargets},
+@Manual{gh,
+  title = {gh: 'GitHub' 'API'},
+  author = {Jennifer Bryan and Hadley Wickham},
   year = {2021},
+  note = {R package version 1.3.0},
+  url = {https://CRAN.R-project.org/package=gh},
 }
 
-@Manual{piggyback,
-  title = {piggyback: Managing Larger Data on a GitHub Repository},
-  author = {Carl Boettiger},
+@Manual{renv,
+  title = {renv: Project Environments},
+  author = {Kevin Ushey},
   year = {2021},
-  note = {R package version 0.1.1},
-  url = {https://github.com/ropensci/piggyback},
+  note = {R package version 0.14.0},
+  url = {https://rstudio.github.io/renv/},
 }
 
-@Article{epinowcast,
-  title = {epinowcast: Hierarchical nowcasting of right censored epidemological counts},
-  author = {Sam Abbott},
-  journal = {Zenodo},
-  year = {2021},
-  doi = {10.5281/zenodo.5637165},
-}
