--- a/docs/paper/library.bib
+++ b/docs/paper/library.bib
@@ -36,6 +36,15 @@
   doi = {10.5281/zenodo.5559016},
 }
 
+@article{betancourt_2017,
+  title={Diagnosing biased inference with divergences},
+  author={Betancourt, Michael},
+  year={2017},
+  volume={4},
+  journal={Stan Case Studies},
+  url={https://mc-stan.org/users/documentation/case-studies/divergences_and_bias.html}
+}
+
 @Article{scoringutils,
   title = {Evaluating Forecasts with scoringutils in R},
   author = {Nikos I. Bosse and Hugo Gruson and Anne Cori and Edwin {van Leeuwen} and Sebastian Funk and Sam Abbott},
