--- a/docs/paper/paper.Rmd
+++ b/docs/paper/paper.Rmd
@@ -89,7 +89,12 @@ population <- fread(here("data", "population.csv"))
 # Merge with truth and rescale to incidence rate per 100,000
 forecasts <- fread(here("data", "forecasts.csv")) |>
   merge_forecasts_with_truth(truth) |>
-  rescale_to_incidence_rate(population, scale = 1e4)
+  rescale_to_incidence_rate(population, scale = 1e4) |>
+  rename_models()
+
+# Load forecast scores
+scores <- fread(here("data", "scores.csv")) |>
+  rename_models()
 ```
 
 - Data from JHU as used as truth data by the ECDC forecasting hub.
@@ -228,7 +233,8 @@ forecasts[location_name %in% locs] |>
     scale_y_log10(labels = comma, oob = squish, limits = c(0.1, 1000)) +
     scale_fill_brewer(palette = "Dark2") +
     scale_color_brewer(palette = "Dark2") +
-    labs(x = "Date", fill = "Model", col = "Model", ramp = "Range")
+    labs(x = "Date", fill = "Model", col = "Model", ramp = "Range",
+         y = "Notified test positive cases per 10,000 population")
 ```
 
 ## Forecast evaluation {-}
