--- a/docs/paper/paper.Rmd
+++ b/docs/paper/paper.Rmd
@@ -15,7 +15,8 @@ bibliography: library.bib
 output:
   rticles::peerj_article: default
   bookdown::pdf_book:
-    base_format: rticles::peerj_article # for using bookdown features like \@ref()
+    base_format: rticles::peerj_article
+    extra_dependencies: ["float"]
 ---
 
 ```{r, include = FALSE}
@@ -25,7 +26,9 @@ knitr::opts_chunk$set(
   eval = TRUE,
   echo = FALSE,
   message = FALSE,
-  cache = TRUE
+  cache = TRUE,
+  messages = FALSE,
+  warnings = FALSE
 )
 ```
 
@@ -203,14 +206,15 @@ coverage <- scores |>
 ```
 
 ```{r relative-interval-score}
+cols <- c("location", "target_end_date", "horizon", "range", "model")
 relative_interval_score <- scores |>
   copy() |>
-  setorderv(c(
-    "location", "target_end_date", "horizon", "quantile", "model"
-  )) |>
+  setorderv(cols) |>
+  DT(, c(..cols, "interval_score")) |>
+  unique() |>
   DT(,
     relative_interval_score := interval_score / shift(interval_score),
-    by = c("location", "target_end_date", "horizon", "quantile")
+    by = c("location", "target_end_date", "horizon", "range")
   ) |>
   DT(model %in% "Surrogate")
 ```
@@ -243,7 +247,7 @@ The code for the forecating model defined above along with the infrastructure re
 
 ## Visualisation of forecasts by horizon {-}
 
-```{r vis-forecasts, fig.height = 9, fig.width = 9, fig.cap = "Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in the Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom,  by forecast horizon (one to four weeks). Incidence rates are shown on a log scale. 30%, 60%, and 90% credible intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time."}
+```{r vis-forecasts, fig.cap = "Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in the Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom,  by forecast horizon (one to four weeks). Incidence rates are shown on a log scale. 30\\%, 60\\%, and 90\\% credible intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time.", out.width = "95%", fig.height = 12, fig.width = 9}
 locs <- c("United Kingdom", "Germany", "Slovakia", "Italy", "Poland", "Greece")
 
 forecasts[location_name %in% locs] |>
@@ -283,7 +287,7 @@ forecasts[location_name %in% locs] |>
     - Relative interval score by quantile by horizon.
 
 
-```{r plot-coverage}
+```{r plot-coverage, fig.height = 9, fig.width = 9, out.width = "95%"}
 hlines <- data.table(
   range = paste0(ranges, "% interval"), nominal = ranges / 100
 )
@@ -299,7 +303,7 @@ plot_cov_levels <- ggplot(coverage) +
   ) +
   scale_colour_brewer(palette = "Dark2") +
   scale_y_continuous(labels = percent) +
-  facet_wrap(vars(range), ncol = 1) +
+  facet_wrap(vars(range), ncol = 1, scales = "free_y") +
   theme_scoringutils() +
   labs(
      y = "Proportion of data within forecast interval",
@@ -311,13 +315,45 @@ plot_cov_quantile <- scores |>
   summarise_scores(by = c("model", "quantile", "horizon")) |>
   plot_quantile_coverage(scores) +
   aes(col = model) +
+  scale_x_continuous(labels = percent) +
+  scale_y_continuous(labels = percent) +
   scale_colour_brewer(palette = "Dark2") +
+  guides(col = guide_none()) +
   facet_wrap(vars(horizon)) +
-  labs(col = "Model")
+  labs(col = "Model", y = "Percent of observations below quantile")
 
 plot_interval_score <- relative_interval_score |>
-  geom
+  copy() |>
+  DT(,
+    .(relative_interval_score = median(relative_interval_score)),
+    by = c("horizon", "range")
+  ) |>
+  ggplot() +
+  aes(x = range / 100, y = relative_interval_score, col = as.factor(horizon)) +
+  geom_hline(yintercept = 1, linetype = 2) +
+  geom_point(size = 1.2) +
+  geom_line(alpha = 0.8) +
+  scale_x_continuous(labels = percent) +
+  scale_y_continuous(trans = "log", breaks = seq(1, 4, by = 0.2)) +
+  scale_colour_brewer(palette = "Accent") +
+  theme_scoringutils() +
+  labs(
+    x = "Quantile", y = "Median relative interval score",
+    col = "Forecast horizon (weeks)"
+  )
+
+(((plot_cov_levels /
+  plot_interval_score)  +
+  plot_layout(heights = c(3, 1), guides = "collect")
+) |
+  plot_cov_quantile) +
+  plot_layout(guides = "collect", widths = c(1, 2)) +
+  plot_annotation(tag_levels = "a") &
+  theme(
+    legend.position = "bottom", legend.box="vertical", legend.margin = margin()
+  )
 ```
+
 # Discussion {-}
 
 ## Summary {-}
